--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             
              <div class="nav-links">
-                   <li><a class="active" href="main.html">Home</a></li>
+                   <li><a class="active" href="index.html">Home</a></li>
                    <li><a href="HTML\about.html">About</a></li>
                    <li><a href="HTML\projects.html">Projects</a></li>
                    <li><a href="HTML\contact.html">Contact</a></li>
